k8s/dev/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev
  labels:
    app.kubernetes.io/part-of: esapp
    environment: dev
