k8s/dev/11-service-backend-blue.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-blue
  namespace: dev
spec:
  type: ClusterIP
  selector:
    app: backend-blue
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
