k8s/dev/11-service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: dev
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
