k8s/dev/21-service-frontend-blue.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-blue
  namespace: dev
spec:
  type: ClusterIP
  selector:
    app: frontend-blue
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
