k8s/dev/21-service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: dev
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
